# ars-utils

./: .gitignore  LICENSE  README.md  push-with-tag.sh  pyproject.toml  release.sh  version-check.sh
.github/workflows/: build-and-release.yml  build-and-relsease.yml  new-update-and-release.yml
ars/: __init__.py  color_utils.py  mail.py  utils.py
tests/: test_mail.py
