[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ars"
version = "0.5.0"
authors = [
	{name="Ahsanur Rahman Sayem", email="ahsanurrahman10000@icloud.com"}
]


description = "A package that contain my interesting python modules."


readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",]


license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = ["tzdata","color-tools","requests>=2.31.0","oauthlib>=3.2.2","requests-oauthlib>=1.3.1"]
        
[project.urls]
Homepage = "https://github.com/ahsanurrahman-sayem/ars"
 
Issues = "https://github.com/ahsanurrahman-sayem/ars/issues"